--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
-    "start": "vite",
-    "build": "vite build"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
